Correction overflow #4
test 2

--- a/static/css/styles.scss
+++ b/static/css/styles.scss
@@ -3,7 +3,8 @@
 }
 
 html{
-  overflow-x: scroll; 
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 a{
